# Catenar

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_SCRIPT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  policy.json  policy.json.example
.github/workflows/: test.yml
aegis-enterprise/: CONTRIBUTING.md  Cargo.toml
aegis-enterprise/deploy/helm/enterprise/: Chart.yaml  values.yaml
aegis-enterprise/deploy/helm/enterprise/templates/: configmap-integrations.yaml  deployment-redis.yaml
aegis-enterprise/enterprise-keys/: Cargo.toml
aegis-enterprise/enterprise-keys/src/: lib.rs
aegis-enterprise/verifier-enterprise/: Cargo.toml
aegis-enterprise/verifier-enterprise/src/: main.rs
agent/: aegis_sdk.py  agent.py  config.json
agent/examples/: README.md  blocked_tool_demo.py
core/proxy/: Cargo.toml  Dockerfile  README.md
core/proxy/src/: certs.rs  intercept.rs  main.rs  payload_policy.rs  schema_validator.rs  telemetry.rs  trace_log.rs  webhook.rs
core/verifier/: Cargo.toml  Dockerfile
core/verifier/src/: engine.rs  keys.rs  lib.rs  main.rs  policy.rs  schema.rs  telemetry.rs
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: middleware.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/agents/: route.ts
dashboard/src/app/api/alerts/ingest/: route.ts
dashboard/src/app/api/audit/export/: route.ts
dashboard/src/app/api/policy/: route.ts
dashboard/src/app/api/receipts/: route.ts
dashboard/src/app/api/register/: route.ts
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/dashboard/incidents/[id]/: page.tsx
dashboard/src/app/dashboard/integrations/: page.tsx
dashboard/src/app/dashboard/policy/: page.tsx
dashboard/src/app/dashboard/receipts/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: dashboard-sidebar.tsx
dashboard/src/lib/: anchor.ts  api.ts  auth.ts  rate-limit.ts  receipt-store.ts  schemas.ts  severity.ts
deploy/: README.md  prometheus-demo.yaml
deploy/grafana/provisioning/dashboards/: catenar-violations.json
deploy/helm/aegis/: Chart.yaml  values.yaml
deploy/helm/aegis/templates/: NOTES.txt  configmap-policy.yaml  deployment-proxy.yaml  deployment-verifier.yaml  hpa.yaml  secret-signing-key.yaml  service-proxy.yaml  service-verifier.yaml
deploy/helm/catenar/: Chart.yaml  values.yaml
deploy/helm/catenar/templates/: NOTES.txt  configmap-fluent-bit.yaml  configmap-otel-collector.yaml  configmap-policy.yaml  deployment-proxy.yaml  deployment-verifier.yaml  hpa.yaml  networkpolicy.yaml  secret-signing-key.yaml  service-proxy.yaml  service-verifier.yaml  serviceaccount-verifier.yaml
dev/cli/: Cargo.toml
dev/cli/src/: main.rs
dev/scripts/windows/: run-verifier.ps1
docs/: ARCHITECTURE.md  CISO_HANDOFF.md  ENTERPRISE_BOUNDARY.md  OPEN_CORE.md  README.md  RED_TEAM_SECURITY_AUDIT.md  SECURITY_AUDIT.md  proxy_mitm_ca_trust.md
docs/demo/: ciso-demo-script.md  getting-started.md  policy-quickstart.md
docs/runbooks/: 01-policy-violation-spike.md  02-proxy-unhealthy.md  03-verifier-signing-failure.md  04-wal-forwarding-failure.md
docs/security/: SECURITY-AUDIT-ZTNA.md  trust-model.md
docs/web/: design_standards.md  security_protocol.md
examples/: bring_your_own_agent.py  requirements.txt  stress_test_agent.py  swarm_demo.py
examples/policies/: README.md
policies/: README.md  default.rego  payload.rego  response.rego
proxy/: Cargo.toml  Dockerfile  README.md
proxy/src/: intercept.rs  main.rs  telemetry.rs  trace_log.rs
scripts/: demo.ps1  demo.sh  ensure-policy.ps1  ensure-policy.sh  run-byoa.ps1  run-byoa.sh  test-all.ps1  test-all.sh
sdk-node/: package-lock.json  package.json  tsconfig.json
sdk-node/src/: index.ts
sdks/nodejs/: package-lock.json  package.json
sdks/nodejs/src/: index.ts  intercept.ts
sdks/python/: aegis_intercept.py  agent.py  catenar_intercept.py  catenar_sdk.py  pyproject.toml
sdks/python/examples/: README.md  blocked_tool_demo.py
sdks/python/tests/: test_catenar_sdk.py
tools/aegis-verify/: Cargo.toml
tools/aegis-verify/src/: main.rs
tools/catenar-verify/: Cargo.toml
tools/catenar-verify/src/: main.rs
verifier/: .dockerignore  Cargo.toml  Dockerfile
verifier/src/: engine.rs  keys.rs  main.rs  policy.rs  schema.rs  store.rs  telemetry.rs
web/: .env.local.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: page.tsx
web/src/app/api/agents/: route.ts
web/src/app/api/alerts/: route.ts
web/src/app/api/alerts/ingest/: route.ts
web/src/app/api/auth/login/: route.ts
web/src/app/api/policy/history/: route.ts
web/src/app/api/receipts/: route.ts
web/src/app/api/register/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/agents/: page.tsx
web/src/app/dashboard/alerts/: page.tsx
web/src/app/dashboard/compliance/: page.tsx
web/src/app/dashboard/integrations/: page.tsx
web/src/app/dashboard/policy/: page.tsx
web/src/app/dashboard/receipts/: page.tsx
web/src/app/dashboard/sdk/: page.tsx
web/src/app/dashboard/verify/: page.tsx
web/src/app/login/: page.tsx
web/src/components/: dashboard-sidebar.tsx
web/src/lib/: agent-store.ts  alert-store.ts  anchor.ts  api.ts  policy-history.ts  rate-limit.ts  sanitize.ts  schemas.ts  severity.ts  types.ts
