[package]
name = "aegis-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.4"
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
rand = "0.8"
regorus = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
