[package]
name = "aegis-enterprise-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-api = { path = "../../core/verifier" }
anyhow = "1"
async-trait = "0.1"
aws-config = "1"
aws-sdk-kms = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
