[package]
name = "verifier-enterprise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verifier-enterprise"
path = "src/main.rs"

[dependencies]
aegis-api = { path = "../../core/verifier" }
aegis-enterprise-keys = { path = "../enterprise-keys" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
