[package]
name = "catenar-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
lru = "0.12"
jsonschema = "0.18"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
regorus = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
