[package]
name = "catenar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.4"
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
hmac = "0.12"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
rand = "0.8"
regorus = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
